--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,11 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Ignore all local files not related to project
+.idea
+target/
+src/main/resources/config.properties
+
+# Local universe details
+src/**/universes
