Learn bot to be run in headless chrome

--- a/src/main/resources/config.examle.properties
+++ b/src/main/resources/config.examle.properties
@@ -10,3 +10,4 @@ universe=Polaris
 # Chrome driver path setup
 # Use this example (don't forget to escape path)
 webdriver.chrome.driver=C:\\Users\\nprik\\workspace\\webdrivers\\chromedriver.exe
+chrome.headless = false
