YA: Small fixes in logging of details. Add restart of empire in case of 20 exceptions

--- a/src/main/resources/config.examle.properties
+++ b/src/main/resources/config.examle.properties
@@ -11,3 +11,10 @@ universe=Polaris
 # Use this example (don't forget to escape path)
 webdriver.chrome.driver=C:\\Users\\nprik\\workspace\\webdrivers\\chromedriver.exe
 chrome.headless = false
+
+empire.build.resources = true
+empire.build.factories = true
+empire.do.researches = true
+empire.build.defence = true
+empire.build.fleet = true
+empire.build.colonies = true
