Implement fleet build for basic resource transportation

--- a/src/main/resources/config.examle.properties
+++ b/src/main/resources/config.examle.properties
@@ -6,7 +6,8 @@ url=https://ru.ogame.gameforge.com/
 login=login@gmail.com
 password=youRealPassword
 universe=Polaris
-
+universe.speed = 5
+universe.fleet.speed = 2
 # Chrome driver path setup
 # Use this example (don't forget to escape path)
 webdriver.chrome.driver=C:\\Users\\nprik\\workspace\\webdrivers\\chromedriver.exe
