Add collection of resources on main planet logic. Add execution time options

--- a/src/main/resources/config.examle.properties
+++ b/src/main/resources/config.examle.properties
@@ -19,3 +19,6 @@ empire.do.researches = true
 empire.build.defence = true
 empire.build.fleet = true
 empire.build.colonies = true
+
+empire.execution.hours = 0
+empire.execution.minutes = 3
