Add galaxy and check colonization scenario

--- a/src/main/resources/config.examle.properties
+++ b/src/main/resources/config.examle.properties
@@ -22,5 +22,6 @@ empire.build.colonies = true
 
 empire.execution.hours = 0
 empire.execution.minutes = 3
+empire.colony.min.size = 180
 
 empire.log.state = false
