--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,11 @@
             <version>2.8.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.14</version>
+        </dependency>
+
     </dependencies>
 </project>
