Implement fleet save and fleet revert tasks. Add logic to revert all save fleets when empire is in peace

--- a/src/main/resources/config.examle.properties
+++ b/src/main/resources/config.examle.properties
@@ -19,6 +19,7 @@ empire.do.researches = true
 empire.build.defence = true
 empire.build.fleet = true
 empire.build.colonies = true
+empire.send.expeditions = true
 
 empire.execution.hours = 0
 empire.execution.minutes = 3
