Add configs for some parameters of execution. Add more conditions to research

--- a/src/main/resources/config.examle.properties
+++ b/src/main/resources/config.examle.properties
@@ -20,6 +20,12 @@ empire.build.defence = true
 empire.build.fleet = true
 empire.build.colonies = true
 empire.send.expeditions = true
+empire.check.attack = true
+
+sleep.timeout = 10000
+empire.check.attack.timeout = 120
+update.resources.timeout = 900
+fleet.save.timeout = 180
 
 empire.execution.hours = 0
 empire.execution.minutes = 3
