Add parameter for atack threshold

--- a/src/main/resources/config.examle.properties
+++ b/src/main/resources/config.examle.properties
@@ -30,5 +30,6 @@ fleet.save.timeout = 300
 empire.execution.hours = 0
 empire.execution.minutes = 0
 empire.colony.min.size = 180
+attack.resources.threshold = 50000
 
 empire.log.state = false
